(add new changes on top of this file)

07-04-27 Jochen Rau  <j.rau@web.de>

	* Initial release